simple fix on mobile screen

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -2,11 +2,16 @@
   width: 1.2rem;
   color: white;
 }
+
 nav {
-  padding-left: 0.5rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
-  align-items: end;
-  height: 64px;
   background-color: rgb(248, 244, 244);
+}
+
+.btn-toolbar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
